# SerialMonitorWebUI

./: .gitignore  CMakeLists.txt  README.md  SPEC.md
backend/include/: ConfigManager.h  SerialPort.h  WebServer.h
backend/src/: ConfigManager.cpp  SerialPort.cpp  WebServer.cpp  main.cpp
docs/: DEVELOPMENT_TUTORIAL.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: AppHeader.vue  ConnectionPanel.vue  DataDisplay.vue  SendPanel.vue  StatusBar.vue
frontend/src/stores/: serial.ts
frontend/src/styles/: main.scss
